<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/golden">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/user"
        android:layout_marginTop="@dimen/_50sdp"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:id="@+id/userRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/Best"
        android:orientation="vertical"
        android:paddingTop="@dimen/_25sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:paddingStart="@dimen/_15sdp"
        android:paddingBottom="@dimen/_25sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_18sdp"
                android:layout_weight="0.2"
                android:layout_marginTop="@dimen/_8sdp"
                android:src="@drawable/single_user_icon"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:background="@null"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_3sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_15ssp"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/cancelUsername"
                android:layout_width="0dp"
                android:layout_height="@dimen/_18sdp"
                android:layout_weight="0.2"
                android:layout_marginTop="@dimen/_6sdp"
                android:src="@drawable/cancel"
                android:visibility="invisible"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_25sdp"
            android:weightSum="2">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_18sdp"
                android:layout_weight="0.2"
                android:layout_marginTop="@dimen/_8sdp"
                android:src="@drawable/password_lock"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginStart="@dimen/_3sdp"
                android:background="@null"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="@dimen/_3sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_15ssp"
                android:autofillHints="" />

            <ImageView
                android:id="@+id/hidden"
                android:layout_width="0dp"
                android:layout_height="@dimen/_18sdp"
                android:layout_weight="0.2"
                android:layout_marginTop="@dimen/_6sdp"
                android:src="@drawable/hidden_view"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/visible"
                android:layout_width="0dp"
                android:layout_height="@dimen/_18sdp"
                android:layout_weight="0.2"
                android:layout_marginTop="@dimen/_6sdp"
                android:src="@drawable/visible"
                android:visibility="gone"
                android:contentDescription="@string/todo" />

        </LinearLayout>

        <TextView
            android:id="@+id/Visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_3sdp"
            android:background="@null"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/reset_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/round_style"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/bold_letters"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/log_in_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/round_style"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/bold_letters"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_weight="1"
                android:indeterminateTint="@color/green"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/designationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/Best"
        android:padding="@dimen/_13sdp"
        android:visibility="gone">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/_21sdp"
            android:layout_weight="0.2"
            android:layout_marginTop="@dimen/_6sdp"
            android:src="@drawable/single_user_icon"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@null"
            android:padding="@dimen/_3sdp"
            android:textColor="@color/black"
            android:hint="Designation"
            android:textColorHint="@color/black"
            android:textSize="@dimen/_15ssp"/>

        <ImageView
            android:id="@+id/genderCategory"
            android:layout_width="0dp"
            android:layout_height="@dimen/_21sdp"
            android:layout_weight="0.2"
            android:layout_marginTop="@dimen/_6sdp"
            android:src="@drawable/add"
            android:contentDescription="@string/todo"
            app:tint="@color/red" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/roleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/round_style"
        android:backgroundTint="@color/Best"
        android:padding="@dimen/_13sdp"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/round_style"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/bold_letters"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="7dp"
                android:layout_weight="1"
                android:background="@drawable/round_style"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/bold_letters"
                android:text="Save"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:layout_weight="1"
                android:indeterminateTint="@color/green"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>